Closed
Bug 291346
Opened 21 years ago
Closed 21 years ago
After migrating from Seamonkey or Outlook / Outlook Express NO Passwords will be saved
Categories
(Thunderbird :: Preferences, defect)
Thunderbird
Preferences
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird1.1
People
(Reporter: Thunderbird_Mail_DE, Assigned: mscott)
Details
Attachments
(1 file)
|
1004 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de-DE; rv:1.7.7) Gecko/20050414 Firefox/1.0.3
Build Identifier: Thunderbird 1.0.2
After migrating from Seamonkey or Outlook / Outlook Express NO Passwords will be
saved.
This problem occurs in the following cases:
1) In Outlook / Outlook Express was defined to NOT remember passwords
2) In Mozilla Suite was defined to NOT remember passwords (which was often
intended to not save passwords in the browser - not mail)
Thunderbird users are not beware of this pref after migration. It is a real
problem because of no existing UI to see or change this pref in Thunderbird!
user_pref("signon.rememberSignons", false);
Reproducible: Always
Expected Results:
We should have a pref UI to this pref (which is exising in Firefox).
Comment 1•21 years ago
|
||
More details:
This bug occurs if you have to enter your password, and want to
check the option to save the password. Normally there is a checkbox to
make thunderbird remember your password. If you migrated from seamonkey
(other programms) the pref mentioned is set. So there is no checkbox
to make thunderbird remember your password. Very annoying for users
with no idea about internal prefs.
| Assignee | ||
Comment 2•21 years ago
|
||
even better, why migrate that pref setting at all? Maybe we should just not
migrate it?
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 3•21 years ago
|
||
A related question:
How is it possible to define which passwords have not to be saved in
Thunderbirds password manager?
In Thunderbird 1.0.x:
Tools > Options... > advanced > passwords > button "passwords..." > 2nd tab
"passwords never saved"
Is this tab necessary in Thunderbird?
| Reporter | ||
Comment 4•21 years ago
|
||
If there is NO way to set the option in Thunderbird itself, it would be
sufficient to not migrate the pref.
| Assignee | ||
Comment 5•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird1.1
| Reporter | ||
Comment 6•21 years ago
|
||
Don't we migrate the setting from any application now?
You need to log in
before you can comment on or make changes to this bug.
Description
•