Bug #291346 --> don't migrate the remember.signon pref